--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   SAM_CLI_TELEMETRY: 0
+  AWS_REGION: us-east-1
 
 jobs:
   build-and-deploy-dev:
@@ -35,7 +36,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Install dependencies
         run: npm ci
@@ -48,7 +49,7 @@ jobs:
           sam deploy \
             --stack-name oauth-service \
             --s3-prefix oauth-service \
-            --region ${{ secrets.AWS_REGION }} \
+            --region ${{ env.AWS_REGION }} \
             --capabilities CAPABILITY_IAM \
             --no-confirm-changeset \
             --no-fail-on-empty-changeset \
