--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "build": "sam build --profile personal-dev"
+    "build": "sam build",
+    "deploy:dev": "sam build && sam deploy --config-file samconfig.toml"
   },
   "keywords": [],
   "author": "",
